--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -5,49 +5,24 @@ template(name='ruser')
         .ui.hidden.divider
         .ui.hidden.divider
         .ui.center.aligned.basic.segment.search
-            i.massive.grey.loading.yin.yang.link.icon
+            i.massive.grey.loading.yin.yang.link.icon.get_user_info
         // .ui.massive.fluid.circular.button.f17.zoomer.pointer.search 
         //     i.download.icon
             // |download user info
     with ruser_doc
         .ui.stackable.padded.grid
             .row
-                .five.wide.right.aligned.column
-                    .ui.right.header      
-                        |#{site}
-                    .ui.two.item.fluid.large.menu
-                        a.ui.basic.item.say_users(href="/s/#{site}/users")
-                            i.users.icon
-                            |users
-                        a.ui.basic.item.say_questions(href="/s/#{site}")
-                            i.question.icon
-                            |questions
-                    .spacer
-                    .ui.big.inline.right.aligned.header(class=post_header_class)
-                        |!{display_name} 
-                        small(title='reputation') {{ commafy reputation }}
+                .four.wide.column
+                    .ui.large.inline.header.get_user_posts(class=post_header_class)
+                        |!{username} 
+                        small(title='reputation') {{ commafy karma }}
                         strong(title="#{site} rank") ##{site_rank} 
                         strong(title='global rank') ##{global_rank}
                     div
-                    with location
-                        +flat_tag_selector
-                    .ui.inline.tertiary.button.set_location.zoomer
-                        |!{location}
-                    if website_url
-                        a.ui.circular.basic.large.button(href=website_url target="_window")
-                            i.globe.icon
-                            |#{website_url}
-                    img.ui.rounded.inline.image.pointer.zoomer.boop(src=profile_image)
+                    img.ui.rounded.inline.image.pointer.zoomer(src=profile_image)
                     a.ui.large.compact.circular.basic.button(href=link target='_window' title="#{site} profile")
                         i.stack.exchange.icon
                         i.external.icon
-                    .ui.grey.small.header
-                        i.tag.icon
-                        |dao tags
-                    .smallscroll
-                        each tags
-                            +flat_tag_selector
-                            // .ui.tertiary.button #{this}
                     +print_this
                     .ui.horizontal.list
                         .item account id #{account_id}
@@ -70,25 +45,7 @@ template(name='ruser')
                     a.ui.external.icon.button(href=link target='_window') 
                         i.linkify.icon
                         // |#{link}
-                .eleven.wide.column
-                    .f12
-                        |!{about_me}
-                    .ui.inline.small.header rep change
-                    .ui.grey.small.horizontal.statistic
-                        .value #{reputation_change_day}
-                        .label day
-                    .ui.grey.small.horizontal.statistic
-                        .value #{reputation_change_week}
-                        .label week
-                    .ui.grey.small.horizontal.statistic
-                        .value #{reputation_change_month}
-                        .label month
-                    .ui.grey.tiny.horizontal.statistic
-                        .value #{reputation_change_quarter}
-                        .label quarter
-                    .ui.grey.tiny.horizontal.statistic
-                        .value #{reputation_change_year}
-                        .label year
+                .twelve.wide.column
                     .ui.grey.tiny.statistic
                         .value #{down_vote_count}
                         .label 
@@ -145,73 +102,11 @@ template(name='ruser')
         
                     div
                     .scrolling
-                        each user_docs
-                            +user_doc_item
-                    .ui.header.get_answers
-                        i.exclamation.icon
-                        |#{user_answers.count} answers
-                    .ui.list.scrolling
-                        each user_answers
-                            +answer_item
-                .three.wide.column
-                    .ui.grey.small.header 
-                        i.fork.icon
-                        |related accounts
-                    each related_accounts
-                        .ui.small.header !{title}
-                    with site_doc
-                        .ui.segment
-                            a.ui.grey.header(href="/s/#{name}") #{name}
-                                
-                    .ui.grey.header.get_badges
-                        i.certificate.icon
-                        |#{user_badges.count} badges
-                    .ui.horizontal.list
-                        .item 
-                            +i n='medal2--v1' cl="#{currentUser.invert_class} ui avatar image"
-                            |gold #{badge_counts.gold}
-                        .item 
-                            +i n='medal-second-place--v1' cl="#{currentUser.invert_class} ui avatar image"
-                            |silver #{badge_counts.silver}
-                        .item
-                            +i n='medal2-third-place--v1' cl="#{currentUser.invert_class} ui avatar image"
-                            |bronze #{badge_counts.bronze}
-                    // .ui.list.smallscroll
-                    each user_badges
-                        .ui.basic.label 
-                            span.header #{name}
-                            // span.description
-                            //     |#{rank}
-                            //     .ui.label #{badge_id}
-                            //     a(href=link target="_window")
-                            //         i.external.grey.icon
-
-                .four.wide.column
-                    .ui.header emotion
-                    .ui.large.list 
-                        .item joy avg
-                        .item sad avg
-                        .item disgust avg
-                        .item anger avg
-                        .item fear avg
-                .four.wide.column
-                    .ui.header.get_tags
-                        i.tag.icon
-                        |tags
-                    .ui.list
-                        each user_tags
-                            .item #{name}: #{count}
-                .four.wide.column
-                    .ui.header.get_comments
-                        i.chat.outline.icon
-                        |comments
-                    .ui.list
-                        each user_comments
-                            .item #{title}
-                    +comments        
+                        each user_posts
+                            +ruser_doc_item
                             
                             
-template(name='user_doc_item')
+template(name='ruser_doc_item')
     .ui.item
         a.ui.header.zoomer.say_title(href="/s/#{site}/psot/#{_id}" class=post_header_class)
             strong #{score}:
