--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -49,7 +49,7 @@ template(name='subreddit')
                     //     .ui.compact.circular.basic.tertiary.button.view_unanswered
                     //         i.question.icon
                     //         | unanswered
-                    i.big.fire.link.icon
+                    // i.big.fire.link.icon
                     .ui.compact.circular.basic.small.tertiary.button.limit_1
                         |1
                     .ui.compact.circular.basic.small.tertiary.button.limit_10
