big round of watson, post calling, url passing viewing, ux

--- a/client/home.jade
+++ b/client/home.jade
@@ -180,7 +180,7 @@ template(name='pull_reddit')
         i.reddit.icon
         
 template(name='call_watson')
-    .ui.icon.massive.basic.button.pull
+    .ui.icon.circular.basic.button.pull
         i.dna.large.teal.icon
 
 template(name='convert')
