--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -62,17 +62,17 @@ template(name='reddit_page')
                     +tone
                     // +skve k='doc_section' v='money' l='money' i='money'
                     // if skv_is 'doc_section'
+                |#{tags.length}
                 each tags
-                    +doc_tag
-                // |#{tags.length}
+                    +flat_tag_selector
             .four.wide.column
                 if in_dev
                     +print_this
-                a.ui.basic.circular.button(href=url target="_window" title=url) 
+                a.ui.basic.circular.button(href=data.url target="_window" title=data.url) 
                     i.external.icon
                     |url
-                if thumbnail
-                    img.ui.fluid.rounded.image(src=thumbnail)
+                if data.thumbnail
+                    img.ui.fluid.rounded.image(src=data.thumbnail)
                 .ui.header #{data.domain}
                 a.ui.basic.fluid.button(href="https://www.reddit.com#{data.permalink}" target="_window") 
                     i.external.grey.icon
@@ -82,32 +82,24 @@ template(name='reddit_page')
                 a.ui.fluid.basic.button(href="/user/#{data.author}")
                     i.user.outline.icon
                     |#{data.author}
-                unless watson
-                    +call_watson
-                else
+                +call_watson id=_id key='data.url' durl=data.url mode='url'
+                if watson
                     +doc_emotion
-                if watson    
                     unless tone
                         +call_tone    
 
-                a.ui.small.header(href=url target='_window')
+                a.ui.small.header(href=data.url target='_window')
                     | #{data.url}
                 if in_dev
                     .ui.small.header reddit_id #{data.reddit_id}
-                .ui.small.statistic
-                    .label
-                        i.comment.outline.icon
-                    .value
-                        |#{data.comment_count}
-                .ui.tiny.statistic
-                    .label
-                        i.thumbs.up.outline.icon
-                    .value
-                        |#{data.ups}
+                .ui.basic.label
+                    i.comment.outline.icon
+                    |#{data.comment_count}
+                .ui.basic.label
+                    i.thumbs.up.outline.icon
+                    |#{data.ups}
                 |{{to_percent data.upvote_ratio}}%
                 .ui.small.inline.header #{data.num_crossposts} crossposts
-                each tags
-                    +flat_tag_selector
         //   "_author_id": "vwCi2GTJgvBJN5F6c",
         //   "_author_username": "dev",
         //   "_timestamp": 1605655369365,
